RESOLVED FIXED150473
NativeContextMenuItem isn't needed anymore, remove it
https://bugs.webkit.org/show_bug.cgi?id=150473
Summary NativeContextMenuItem isn't needed anymore, remove it
Anders Carlsson
Reported 2015-10-22 14:10:18 PDT
NativeContextMenuItem isn't needed anymore, remove it
Attachments
Patch (18.52 KB, patch)
2015-10-22 14:10 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-10-22 14:10:41 PDT
Anders Carlsson
Comment 2 2015-10-22 14:14:49 PDT
Note You need to log in before you can comment on or make changes to this bug.