NativeContextMenuItem isn't needed anymore, remove it https://bugs.webkit.org/show_bug.cgi?id=150473

Reviewed by Tim Horton.

* PlatformEfl.cmake:
* PlatformGTK.cmake:
* Shared/NativeContextMenuItem.h: Removed.
(WebKit::NativeContextMenuItem::~NativeContextMenuItem): Deleted.
(WebKit::NativeContextMenuItem::nsMenuItem): Deleted.
* Shared/WebContextMenuItem.cpp:
(WebKit::WebContextMenuItem::WebContextMenuItem): Deleted.
* Shared/WebContextMenuItem.h:
(WebKit::WebContextMenuItem::create): Deleted.
(WebKit::WebContextMenuItem::nativeContextMenuItem): Deleted.
* Shared/efl/NativeContextMenuItemEfl.cpp: Removed.
(WebKit::NativeContextMenuItem::NativeContextMenuItem): Deleted.
* Shared/gtk/NativeContextMenuItemGtk.cpp: Removed.
(WebKit::NativeContextMenuItem::NativeContextMenuItem): Deleted.
* Shared/mac/NativeContextMenuItem.mm: Removed.
(WebKit::NativeContextMenuItem::NativeContextMenuItem): Deleted.
* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::nsMenuItem): Deleted.
* WebKit2.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/168629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191472 268f45cc-cd09-0410-ab3c-d52691b4dbfc